Prevent text from overflowing indicators in drop downs

--- a/engines/common/nucleus/scss/nucleus/_nav.scss
+++ b/engines/common/nucleus/scss/nucleus/_nav.scss
@@ -83,6 +83,9 @@
 			}
 
     		&.g-parent {
+    			.g-menu-item-content {
+					margin-right: 2rem;
+				}
 	    		.g-menu-parent-indicator {
 	    			position: absolute;
 	    			right: $content-padding - 0.2;
